# stablehlo-coreml

./: .coveragerc  .flake8  LICENSE  README.md  pyproject.toml
.agent/workflows/: test-and-lint.md
.github/workflows/: publish-python-package.yml  publish-to-pypi.yml  run-tests.yml
stablehlo_coreml/: __init__.py  converter.py  ops_register.py  padding.py  reductions.py  sort_utils.py  translation_context.py  utils.py
stablehlo_coreml/passes/: debug_rss.py  quantize_const_weights.py  remove_noop_slice_update.py  utils.py
tests/: flax_blocks.py  flax_xlstm.py  test_equinox.py  test_flax.py  test_hlo.py  test_jax.py  test_stable_sort.py  test_symbolic_shapes.py  test_utils.py  utils.py
tests/gemma/: gemma4_model.py  test_gemma4.py
tests/passes/: test_register_optimizations.py  test_remove_noop_slice_update.py  test_sort.py
tests/pytorch/: test_pytorch.py
