[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "stablehlo-coreml"
version = "0.0.1"
authors = [
    { name="Kasper Nielsen", email="kasper0406@gmail.com" },
]
description = "Convert StableHLO models into Apple Core ML format"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
keywords=[ "stablehlo", "hlo", "xla", "coreml", "machinelearning", "ml", "coremltools", "converter", "neural" ]

dependencies = [
    'coremltools>=8.0b2; python_version >= "3.9" and python_version <= "3.11"',
    "numpy~=2.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest",
    "jax",
    "flax",
    "flatbuffers",
    "einops",
    "pillow",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = [ "3.9" ]

[project.urls]
Homepage = "https://github.com/kasper0406/stablehlo-coreml"
Issues = "https://github.com/kasper0406/stablehlo-coreml/issues"
